<resources>
    <string name="app_name">Flunch Drive</string>

    <string name="title_section1">Accueil</string>
    <string name="title_section2">Découvrez Flunch Drive</string>
    <string name="title_section3">Trouver votre Flunch</string>
    <string name="title_section4">"Arrivé"</string>
    <string name="title_section5">Vos commandes</string>
    <string name="title_section6">Votre compte</string>
    <string name="title_section7">CGV</string>
    <string name="title_section8">Contact</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">Flunch Drive</string>

    <string name="hello_world">Hello world!</string>

    <color name="flunch_color">#eb132b</color>
    <color name="white">#ffffff</color>

    <string name="alt_img">Flunch Drive</string>
    <string name="title_activity_screen_slide">ScreenSlideActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="button_access">ACCES FLUNCH DRIVE</string>
    <string name="title_activity_accueil">Accueil</string>

    <string name="exp1">Pour la première fois, commandez\n en ligne dans votre Flunch préféré\n et venez récupérez votre\n
        commande en voiture.</string>
    <string name="exp2">En quelques clics, choisissez\n votre Flunch, vos produits et\n payez en toute sécurité</string>
    <string name="font_din">./assets/fonts/DINMedium.ttf</string>
    <string name="exp3">Venez à l’heure demandée dans\n votre Flunch et prévenez nous\n de votre arrivée sur parce grâce\n au bouton « Arrivé ».</string>
    <string name="exp4">Un équipier Flunch vous apporter\n votre commande dans\n
        les 5 minutes !</string>
    <string name="font_golos">./assets/fonts/Golos-Bold.ttf</string>
</resources>
