<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/flunch_color">

    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:gravity="center" android:id="@+id/L1" android:layout_alignParentStart="true"
                      android:padding="10dp">
            <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center"
                    android:src="@drawable/header_logo"
                    android:contentDescription="@string/alt_img"
                    />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:id="@+id/L2" android:layout_below="@+id/L1" android:gravity="center"
                      android:padding="10dp">
            <ImageView
                    android:id="@+id/imgSlide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:src="@drawable/nbslide_two"
                    android:contentDescription="@string/alt_img"
                    />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:id="@+id/L3" android:layout_below="@+id/L2"
                      android:padding="10dp">
            <ImageView
                    android:id="@+id/img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:src="@drawable/expli2"
                    android:contentDescription="@string/alt_img"
                    />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:id="@+id/L4"
                      android:padding="10dp" android:layout_below="@+id/L3">
            <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                      android:text="@string/exp2" android:id="@+id/text"
                      android:textColor="@color/white"
                      android:gravity="center" android:fontFamily="@string/font_din"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:id="@+id/L5"  android:gravity="center"
                      android:padding="10dp" android:layout_below="@+id/L4">
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAccess"
                    android:text="@string/button_access"
                    android:textColor="@color/white"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:textAllCaps="true"
                    android:background="@drawable/button_access" android:fontFamily="@string/font_golos"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>